# barn

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
examples/collision/: main.rs  player.rs  start_state.rs  tile.rs
examples/hello_world/: main.rs  start_state.rs
examples/music/: main.rs  start_state.rs
examples/snow_scene/: main.rs  snow.rs  start_state.rs
examples/sprite_animation/: main.rs  start_state.rs
src/: lib.rs
src/audio/: mod.rs
src/fonts/: font_details.rs  mod.rs
src/game/: barn_context.rs  context.rs  game.rs  mod.rs  state.rs
src/graphics/: barn_gfx.rs  color.rs  fill_type.rs  mod.rs  sdl_renderer.rs  sdl_sprite.rs  sprite_batch.rs  texture.rs  wgpu.rs  wgpu_renderer.rs  wgpu_sprite.rs
src/graphics/shaders/: sprite.wgsl  text.wgsl
src/input/: keyboard_handler.rs  mod.rs
src/math/: bounding_box_2d.rs  bounding_circle_2d.rs  matrix3.rs  mod.rs  vector2.rs
