[package]
name = "barn"
version = "0.1.0"
authors = ["Michael <stottmichael2@gmail.com>"]
edition = "2021"
description = "Rust Game Framework"
license = "MIT"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
winit = "0.29"
wgpu = "0.19"
rodio = "0.17"
tokio = { version = "1.0", features = ["full"] }
image = "0.24"
pollster = "0.3"
env_logger = "0.10"
log = "0.4"
bytemuck = { version = "1.13", features = ["derive"] }
ab_glyph = "0.2"
rand = "0.8"

[[example]]
name = "hello_world"

[[example]]
name = "snow_scene"
path = "examples/snow_scene/main.rs"

[[example]]
name = "sprite_animation"

[[example]]
name = "collision"